# tbco-monitoring-framework

./: .gitignore  CODEOWNERS  NOTICE  PLAN.md  README.md  bors.toml  cabal.project  default.nix  hie.yaml  release.nix  shell.nix  stack.yaml
contra-tracer/: README.md  contra-tracer.cabal
docs/: .gitignore  Code.lhs  Makefile  README.md  mu-benchmarks.tex  references.fmt
docs/Bcc.BM/: 128021  134933  135061  135189  135445.diagram  135573.diagram  141717  148245  148373  168213.diagram  Cardano.BM.prj
docs/haddock/tracer-transformers/: Control-Tracer-Transformers-ObserveOutcome.html  Control-Tracer-Transformers-WithThreadAndTime.html
docs/one-pager/tex/: benchmarking.tex  logging.tex  monitoring.tex
docs/planning/: milestones-logging.dot
docs/pres-20181204/: master.rst
docs/pres-20181204/html/: index.html
docs/pres-20190409/contravariant-idea/: index.html
examples/: lobemo-examples.cabal
examples/acceptor/: Main.hs  acceptor.yaml
examples/complex/: Main.lhs
examples/counters/: Main.lhs
examples/performance/: Main.lhs  README.md
examples/simple/: Main.lhs
examples/stats/: Main.lhs
nix/: default.nix  haskell.nix  pkgs.nix  sources.json  update-tbco-nix.sh
plugins/backend-aggregation/: lobemo-backend-aggregation.cabal
plugins/backend-aggregation/src/Bcc/BM/Backend/: Aggregation.lhs
plugins/backend-editor/: lobemo-backend-editor.cabal
plugins/backend-editor/src/Bcc/BM/Backend/: Editor.lhs
plugins/backend-ekg/: lobemo-backend-ekg.cabal
plugins/backend-ekg/src/Bcc/BM/Backend/: EKGView.lhs  Prometheus.lhs
plugins/backend-graylog/: lobemo-backend-graylog.cabal
plugins/backend-graylog/src/Bcc/BM/Backend/: Graylog.lhs
plugins/backend-monitoring/: lobemo-backend-monitoring.cabal
plugins/backend-monitoring/src/Bcc/BM/Backend/: Monitoring.lhs
plugins/backend-monitoring/test/: Test.lhs
plugins/backend-monitoring/test/Bcc/BM/Test/: Monitoring.lhs
plugins/backend-trace-acceptor/: lobemo-backend-trace-acceptor.cabal
plugins/backend-trace-acceptor/src/Bcc/BM/Backend/: TraceAcceptor.lhs
plugins/backend-trace-forwarder/: lobemo-backend-trace-forwarder.cabal
plugins/backend-trace-forwarder/src/Bcc/BM/Backend/: TraceForwarder.lhs
plugins/scribe-systemd/: lobemo-scribe-systemd.cabal
plugins/scribe-systemd/src/Bcc/BM/Scribe/: Systemd.lhs
scripts/buildkite/: rebuild.hs
tbco-monitoring/: README.md  tbco-monitoring.cabal
tbco-monitoring/src/Bcc/BM/: Configuration.lhs  Counters.lhs  IOManager.hs  Plugin.lhs  Rotator.lhs  Setup.lhs  Snocket.hs  Stats.hs  Trace.lhs  Tracer.lhs  Tracing.lhs
tbco-monitoring/src/Bcc/BM/Backend/: Log.lhs  LogBuffer.lhs  ProcessQueue.lhs  Switchboard.lhs
tbco-monitoring/src/Bcc/BM/Configuration/: Model.lhs  Static.lhs
tbco-monitoring/src/Bcc/BM/Counters/: Common.lhs  Darwin.hsc  Dummy.lhs  Linux.lhs  Windows.hsc
tbco-monitoring/src/Bcc/BM/Data/: Aggregated.lhs  AggregatedKind.lhs  Backend.lhs  BackendKind.lhs  Configuration.lhs  Counter.lhs  LogItem.lhs  MonitoringEval.lhs  Observable.lhs  Output.lhs  Rotation.lhs  Severity.lhs  SubTrace.lhs  Trace.lhs  Tracer.lhs  Transformers.lhs
tbco-monitoring/src/Bcc/BM/Internal/: ElidingTracer.lhs
tbco-monitoring/src/Bcc/BM/Observer/: Monadic.lhs  STM.lhs
tbco-monitoring/src/Bcc/BM/Stats/: Resources.hs
tbco-monitoring/static/: configuration-editor.html
tbco-monitoring/static/css/: configuration-editor.css
tbco-monitoring/test/: Test.lhs  config.yaml
tbco-monitoring/test/Bcc/BM/: Arbitrary.hs
tbco-monitoring/test/Bcc/BM/Arbitrary/: Aggregated.lhs
tbco-monitoring/test/Bcc/BM/Test/: Aggregated.lhs  Configuration.lhs  LogItem.lhs  Mock.lhs  Rotator.lhs  Routing.lhs  STM.lhs  Structured.lhs  Trace.lhs  Tracer.lhs
tracer-transformers/: NOTICE  tracer-transformers.cabal
