cabal-version:       2.0
name:                lobemo-backend-aggregation
version:             0.1.0.0
synopsis:            provides a backend implementation to aggregate traced values
-- description:
homepage:            https://github.com/The-Blockchain-Company/tbco-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@tbco.io
copyright:           2021 The-Blockchain-Company
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Bcc.BM.Backend.Aggregation
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       tbco-monitoring,
                       aeson,
                       async,
                       text,
                       time,
                       safe-exceptions,
                       stm,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  hs-source-dirs:      src
  default-language:    Haskell2010
