cabal-version:       2.0
name:                lobemo-backend-graylog
version:             0.1.0.0
synopsis:            provides a backend implementation to Graylog
-- description:
homepage:            https://github.com/The-Blockchain-Company/tbco-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@blockchain-company.io
copyright:           2021 The-Blockchain-Company
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Bcc.BM.Backend.Graylog
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       tbco-monitoring,
                       aeson,
                       async,
                       bytestring,
                       network,
                       safe-exceptions,
                       stm,
                       text,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
