cabal-version:       2.0
name:                lobemo-backend-trace-acceptor
version:             0.1.0.0
synopsis:            a trace acceptor backend
-- description:
homepage:            https://github.com/The-Blockchain-Company/tbco-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@tbco.io
copyright:           2020 The Blockchain Co.
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Bcc.BM.Backend.TraceAcceptor
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       tbco-monitoring,
                       aeson,
                       async,
                       bytestring,
                       directory,
                       network,
                       safe-exceptions,
                       stm,
                       text,
                       time,
                       unix-compat
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix
  hs-source-dirs:      src
  default-language:    Haskell2010
