cabal-version:       2.0
name:                lobemo-backend-trace-forwarder
version:             0.1.0.0
synopsis:            this backend forwards log items to a trace acceptor
-- description:
homepage:            https://github.com/The-Blockchain-Company/tbco-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@tbco.io
copyright:           2020 GodXCoin
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Bcc.BM.Backend.TraceForwarder
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       tbco-monitoring,
                       aeson,
                       async,
                       bytestring,
                       network,
                       safe-exceptions,
                       stm,
                       text,
                       time,
                       unix-compat
  hs-source-dirs:      src
  default-language:    Haskell2010
