cabal-version:       2.0
name:                lobemo-scribe-systemd
version:             0.1.0.0
synopsis:            provides a backend for logging to systemd/journal
-- description:
homepage:            https://github.com/The-Blockchain-Company/tbco-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@tbco.io
copyright:           2021 The-Blockchain-Company
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Bcc.BM.Scribe.Systemd
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       tbco-monitoring,
                       aeson,
                       bytestring,
                       katip,
                       text,
                       template-haskell,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux)
     build-depends:    hsyslog,
                       libsystemd-journal

  hs-source-dirs:      src
  default-language:    Haskell2010
